Cambios en el front-end

--- a/dashboard_medico.html
+++ b/dashboard_medico.html
@@ -11,10 +11,8 @@
     <nav class="navbar">
         <div class="logo">Clínica <span>Virtual</span></div>
         <ul class="nav-links">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Mis Consultas</a></li>
-            <li><a href="#">Mis Pacientes</a></li>
-            <li><a href="#">Perfil</a></li>
+            <li><a href="dashboard_medico.html">Inicio</a></li>
+            <li><a href="configuracion.html">Configuración</a></li>
             <li><a href="#" onclick="CerrarSesion()">Cerrar Sesión</a></li>
         </ul>
     </nav>
