--- a/pacientes.html
+++ b/pacientes.html
@@ -1,3 +1,4 @@
+<!-- Código modificado de pacientes.html con sección de agregar diagnóstico -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -11,13 +12,11 @@
         <div class="logo">Clínica <span>Virtual</span></div>
         <ul class="nav-links">
             <li><a href="dashboard_medico.html">Inicio</a></li>
-            <li><a href="#">Mis Consultas</a></li>
-            <li><a href="#">Mis Pacientes</a></li>
-            <li><a href="#">Perfil</a></li>
+            <li><a href="configuracion.html">Configuración</a></li>
             <li><a href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
         </ul>
     </nav>
-    
+
     <section class="historial-pacientes">
         <h1>Historial de Pacientes</h1>
         <table>
@@ -30,12 +29,44 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody id="tabla-pacientes">
-                <!-- Los datos de los pacientes se llenarán dinámicamente aquí -->
+            <tbody>
+                <!-- Ejemplo de un paciente, deberías generar este bloque con PHP o JS -->
+                <tr>
+                    <td>Juan Pérez</td>
+                    <td>35</td>
+                    <td>2024-03-10</td>
+                    <td>Gripe</td>
+                    <td><button onclick="toggleDiagnosticoForm('diag_1')">Agregar Diagnóstico</button></td>
+                </tr>
+                <tr id="diag_1" class="diagnostico-form" style="display:none;">
+                    <td colspan="5">
+                        <form action="agregar_diagnostico.php" method="POST">
+                            <input type="hidden" name="paciente_id" value="1"><!-- ID del paciente -->
+                            <label>Descripción:</label><br>
+                            <textarea name="descripcion" required></textarea><br>
+                            <label>Fecha Inicio:</label>
+                            <input type="date" name="fecha_inicio" required><br>
+                            <label>Fecha Fin:</label>
+                            <input type="date" name="fecha_fin" required><br>
+                            <input type="submit" value="Guardar Diagnóstico">
+                        </form>
+                    </td>
+                </tr>
+                <!-- Repite el bloque anterior por cada paciente -->
             </tbody>
         </table>
     </section>
 
-    <script src="script_pacientes.js"></script>
+    <script>
+        function toggleDiagnosticoForm(id) {
+            var form = document.getElementById(id);
+            form.style.display = (form.style.display === 'none') ? 'table-row' : 'none';
+        }
+
+        function cerrarSesion() {
+            // Código de cierre de sesión
+            window.location.href = 'index.html';
+        }
+    </script>
 </body>
 </html>
